# Northwind-SQL-Copilot

./: .gitignore  README.md  main.py  pyproject.toml  query_cache.json
src/: __init__.py  cache.py  config.py  logger_utils.py  models.py  pipeline.py  text_to_sql_pipeline.py
